--- a/app/templates/all_tickets.html
+++ b/app/templates/all_tickets.html
@@ -42,7 +42,7 @@
 
   <header class="main-header">
     <!-- Logo -->
-    <a href="{{ url_for('static',filename='index2.html" class="logo">
+    <a href="{{ url_for('static',filename='index2.html') }}" class="logo">
       <!-- mini logo for sidebar mini 50x50 pixels -->
       <span class="logo-mini"><b>Zub</b>U</span>
       <!-- logo for regular state and mobile devices -->
@@ -63,13 +63,13 @@
           <!-- User Account: style can be found in dropdown.less -->
           <li class="dropdown user user-menu">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-              <img src="{{ url_for('static',filename='dist/img/user2-160x160.jpg" class="user-image" alt="User Image">
+              <img src="{{ url_for('static',filename='dist/img/user2-160x160.jpg') }}" class="user-image" alt="User Image">
               <span class="hidden-xs">Alexander Pierce</span>
             </a>
             <ul class="dropdown-menu">
               <!-- User image -->
               <li class="user-header">
-                <img src="{{ url_for('static',filename='dist/img/user2-160x160.jpg" class="img-circle" alt="User Image">
+                <img src="{{ url_for('static',filename='dist/img/user2-160x160.jpg') }}" class="img-circle" alt="User Image">
 
                 <p>
                   Alexander Pierce - Web Developer
