Worked on New Pages

--- a/app/templates/dashboard.html
+++ b/app/templates/dashboard.html
@@ -109,7 +109,7 @@
 
       <!-- sidebar menu: : style can be found in sidebar.less -->
       <ul class="sidebar-menu" data-widget="tree">
-        <li class="active treeview menu-open">
+        <li class="active">
           <a href="{{ url_for('dashboard') }}">
             <i class="fa fa-dashboard"></i> <span>Dashboard</span>
           </a>
@@ -150,27 +150,27 @@
             <li><a href="#"><i class="fa fa-circle-o"></i> My Overdue Tickets</a></li>
           </ul>
         </li>
-        <li class="treeview menu-open">
+        <li class="treeview">
           <a href="#">
             <i class="fa fa-ticket"></i> <span>Tickets</span>
           </a>
         </li>
-        <li class="treeview menu-open">
+        <li class="treeview">
           <a href="#">
             <i class="fa fa-user-o"></i> <span>Customers</span>
           </a>
         </li>
-        <li class="treeview menu-open">
+        <li class="treeview">
           <a href="#">
             <i class="fa fa-tasks"></i> <span>Tasks</span>
           </a>
         </li>
-        <li class="treeview menu-open">
+        <li class="treeview">
           <a href="#">
             <i class="fa fa-file-pdf-o"></i> <span>Reports</span>
           </a>
         </li>
-        <li class="treeview menu-open">
+        <li class="treeview">
           <a href="#">
             <i class="fa fa-ticket"></i> <span>Open Tickets</span>
           </a>
