--- a/app/templates/dashboard.html
+++ b/app/templates/dashboard.html
@@ -152,27 +152,27 @@
           </ul>
         </li>
         <li class="treeview">
-          <a href="#">
+          <a href="{{ url_for('dashboard') }}">
             <i class="fa fa-ticket"></i> <span>Tickets</span>
           </a>
         </li>
         <li class="treeview">
-          <a href="#">
+          <a href="/all_clients">
             <i class="fa fa-user-o"></i> <span>Customers</span>
           </a>
         </li>
         <li class="treeview">
-          <a href="#">
+          <a href="/tasks">
             <i class="fa fa-tasks"></i> <span>Tasks</span>
           </a>
         </li>
         <li class="treeview">
-          <a href="#">
+          <a href="/reports">
             <i class="fa fa-file-pdf-o"></i> <span>Reports</span>
           </a>
         </li>
         <li class="treeview">
-          <a href="#">
+          <a href="{{ url_for('new_ticket') }}">
             <i class="fa fa-ticket"></i> <span>Open Tickets</span>
           </a>
         </li>
