--- a/app/templates/my_overdue_tickets.html
+++ b/app/templates/my_overdue_tickets.html
@@ -106,8 +106,8 @@
 
       <!-- sidebar menu: : style can be found in sidebar.less -->
       <ul class="sidebar-menu" data-widget="tree">
-        <li class="active treeview menu-open">
-          <a href="dashboard.html">
+        <li class="active">
+          <a href="{{ url_for('dashboard') }}">
             <i class="fa fa-dashboard"></i> <span>Dashboard</span>
           </a>
         </li>
@@ -121,12 +121,12 @@
             </span>
           </a>
           <ul class="treeview-menu">
-            <li><a href="new_users.html"><i class="fa fa-circle-o"></i> Add New User</a></li>
-            <li><a href="new_ticket.html"><i class="fa fa-circle-o"></i> Add New Ticket</a></li>
-            <li><a href="new_customer.html"><i class="fa fa-circle-o"></i> Add New Customer</a></li>
-            <li><a href="new_engineer.html"><i class="fa fa-circle-o"></i> Add New Engineer</a></li>
-            <li><a href="new_equipment.html"><i class="fa fa-circle-o"></i> Add New Equipment</a></li>
-            <li><a href="new_workorder.html"><i class="fa fa-circle-o"></i> Add New Work Order</a></li>
+            <li><a href="{{ url_for('new_users') }}"><i class="fa fa-circle-o"></i> Add New User</a></li>
+            <li><a href="{{ url_for('new_ticket') }}"><i class="fa fa-circle-o"></i> Add New Ticket</a></li>
+            <li><a href="{{ url_for('new_customer') }}"><i class="fa fa-circle-o"></i> Add New Customer</a></li>
+            <li><a href="{{ url_for('new_engineer') }}"><i class="fa fa-circle-o"></i> Add New Engineer</a></li>
+            <li><a href="{{ url_for('new_equipment') }}"><i class="fa fa-circle-o"></i> Add New Equipment</a></li>
+            <li><a href="{{ url_for('new_workorder') }}"><i class="fa fa-circle-o"></i> Add New Work Order</a></li>
           </ul>
         </li>
         <li class="treeview">
@@ -135,42 +135,41 @@
             <span>Views</span>
             <span class="pull-right-container">
               <i class="fa fa-angle-left pull-right"></i>
-              <small class="label pull-right bg-primary">views</small>
             </span>
           </a>
           <ul class="treeview-menu">
-            <li><a href="all_tickets.html"><i class="fa fa-circle-o"></i> All Tickets</a></li>
-            <li><a href="#"><i class="fa fa-circle-o"></i> Open Ticket</a></li>
-            <li><a href="#"><i class="fa fa-circle-o"></i> Closed Tickets</a></li>
-            <li><a href="#"><i class="fa fa-circle-o"></i> Overdue Tickets</a></li>
-            <li><a href="#"><i class="fa fa-circle-o"></i> My Tickets</a></li>
-            <li><a href="#"><i class="fa fa-circle-o"></i> My Open Tickets</a></li>
-            <li><a href="#"><i class="fa fa-circle-o"></i> My Closed Tickets</a></li>
-            <li><a href="#"><i class="fa fa-circle-o"></i> My Overdue Tickets</a></li>
+            <li><a href="/all_open_and_overdue_tickets"><i class="fa fa-circle-o"></i> All Tickets</a></li>
+            <li><a href="/open_and_overdue_tickets"><i class="fa fa-circle-o"></i> Open Tickets</a></li>
+            <li><a href="/closed_and_overdue_tickets"><i class="fa fa-circle-o"></i> Closed Tickets</a></li>
+            <li><a href="/low_priority_and_overdue_tickets"><i class="fa fa-circle-o"></i> Overdue Tickets</a></li>
+            <li><a href="/all_my_open_and_overdue_tickets"><i class="fa fa-circle-o"></i> My Tickets</a></li>
+            <li><a href="/my_open_and_overdue_tickets"><i class="fa fa-circle-o"></i> My Open Tickets</a></li>
+            <li><a href="/my_closed_and_overdue_tickets"><i class="fa fa-circle-o"></i> My Closed Tickets</a></li>
+            <li><a href="/my_low_priority_and_overdue_tickets"><i class="fa fa-circle-o"></i> My Overdue Tickets</a></li>
           </ul>
         </li>
-        <li class="treeview menu-open">
-          <a href="#">
+        <li class="treeview">
+          <a href="{{ url_for('dashboard') }}">
             <i class="fa fa-ticket"></i> <span>Tickets</span>
           </a>
         </li>
-        <li class="treeview menu-open">
-          <a href="#">
+        <li class="treeview">
+          <a href="/all_clients">
             <i class="fa fa-user-o"></i> <span>Customers</span>
           </a>
         </li>
-        <li class="treeview menu-open">
-          <a href="chart.html">
+        <li class="treeview">
+          <a href="/tasks">
             <i class="fa fa-tasks"></i> <span>Tasks</span>
           </a>
         </li>
-        <li class="treeview menu-open">
-          <a href="#">
+        <li class="treeview">
+          <a href="/reports">
             <i class="fa fa-file-pdf-o"></i> <span>Reports</span>
           </a>
         </li>
-        <li class="treeview menu-open">
-          <a href="#">
+        <li class="treeview">
+          <a href="{{ url_for('new_ticket') }}">
             <i class="fa fa-ticket"></i> <span>Open Tickets</span>
           </a>
         </li>
