Added Chart Page

--- a/app/templates/new_customer.html
+++ b/app/templates/new_customer.html
@@ -131,6 +131,7 @@
             <span>Views</span>
             <span class="pull-right-container">
               <i class="fa fa-angle-left pull-right"></i>
+              <small class="label pull-right bg-primary">views</small>
             </span>
           </a>
           <ul class="treeview-menu">
