--- a/app/templates/dashboard.html
+++ b/app/templates/dashboard.html
@@ -138,6 +138,7 @@
             <span>Views</span>
             <span class="pull-right-container">
               <i class="fa fa-angle-left pull-right"></i>
+              <small class="label pull-right bg-primary">views</small>
             </span>
           </a>
           <ul class="treeview-menu">
@@ -151,27 +152,27 @@
             <li><a href="/my_low_priority_and_overdue_tickets"><i class="fa fa-circle-o"></i> My Overdue Tickets</a></li>
           </ul>
         </li>
-        <li class="treeview">
+        <li class="">
           <a href="{{ url_for('dashboard') }}">
             <i class="fa fa-ticket"></i> <span>Tickets</span>
           </a>
         </li>
-        <li class="treeview">
+        <li class="">
           <a href="/all_clients">
             <i class="fa fa-user-o"></i> <span>Customers</span>
           </a>
         </li>
-        <li class="treeview">
+        <li class="">
           <a href="/tasks">
             <i class="fa fa-tasks"></i> <span>Tasks</span>
           </a>
         </li>
-        <li class="treeview">
+        <li class="">
           <a href="/reports">
             <i class="fa fa-file-pdf-o"></i> <span>Reports</span>
           </a>
         </li>
-        <li class="treeview">
+        <li class="">
           <a href="{{ url_for('new_ticket') }}">
             <i class="fa fa-ticket"></i> <span>Open Tickets</span>
           </a>
