--- a/app/templates/new_engineer.html
+++ b/app/templates/new_engineer.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title>Zubacx | New Equipments Page</title>
+    <title>Zubacx | New Engineer Page</title>
     <!-- Tell the browser to be responsive to screen width -->
     <meta
       content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no"
