--- a/app/templates/dashboard.html
+++ b/app/templates/dashboard.html
@@ -227,6 +227,18 @@
             </a>
             
           </li>
+          <li class="">
+            <a href="/all_engineers">
+              <i class="fa fa-user-o"></i> <span>Engineers</span>
+            </a>
+            
+          </li>
+          <li class="">
+            <a href="/all_users">
+              <i class="fa fa-user-o"></i> <span>System Users</span>
+            </a>
+            
+          </li>
           {% endif%}
         <li class="">
           <a href="/tasks">
